<resources>
    <string name="app_name">Halfway</string>
    <string name="check_invites">Check Invites</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account">No account yet? Create one.</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_num">Phone Number</string>
    <string name="create_acct">Create Account</string>
    <string name="already_mem">Already a member? Login.</string>
    <string name="reenter_pass">Re-enter Password</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="finish">Finish</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome, </string>
    <string name="at_symbol">\@</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="members">Members</string>
    <string name="use_location">Use my location</string>
    <string name="my_location">My Location</string>
    <string name="locations_tags">Location Tags</string>
    <string name="create_group">Create Group</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="meeting_title">Meeting Title</string>
    <string name="would_like">would like you to join</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="change_time">Change Time</string>
    <string name="time_format">hh:mm</string>
    <string name="title_activity_group">My Group</string>
    <string name="meeting_places">Meeting Places</string>
    <string name="my_groups">My Groups</string>
    <string name="my_invites">Pending Invites</string>
    <string name="meeting_date">Date of Meeting</string>
    <string name="date_format">mm/dd/yy</string>
    <string name="change_date">Change Date</string>
    <string name="update_location">Update Location</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Place Address</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid values</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="enter_address">Enter an address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">BasicActivity</string>

</resources>
