<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_creator"
        android:hint="@string/username"
        android:layout_marginBottom="10dp"
        android:textSize="10pt"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/would_like"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_meeting_title"
        android:hint="@string/group_name"
        android:textSize="10pt"
        android:gravity="center_horizontal"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/white"
            android:text="@string/accept"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/white"
            android:text="@string/decline"/>

    </LinearLayout>


</LinearLayout>