<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs4518.halfway.activities.GroupActivity"
    tools:showIn="@layout/activity_group">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        android:textColor="@color/white"
        android:hint="@string/group_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="3dp"
        android:textSize="8pt"
        android:textColor="@color/white"
        android:text="@string/members" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:textColor="@color/white"
            android:hint="@string/my_location" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/input_use_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="3dp"
            android:textSize="8pt"
            android:textColor="@color/white"
            android:text="@string/use_location" />

        <ToggleButton
            android:id="@+id/toggle_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"
            android:textSize="8pt"
            android:textColor="@color/white"
            android:text="@string/meeting_time" />

        <TextView
            android:id="@+id/meeting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="3dp"
            android:textSize="8pt"
            android:textColor="@color/white"
            android:hint="@string/time_format" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_change_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:text="@string/change_time"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/halfway_logo"
            android:src="@drawable/logo"
            android:layout_height="50dp"
            android:layout_width="90dp"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:textSize="10pt"
            android:layout_toEndOf="@id/halfway_logo"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/meeting_places" />

    </RelativeLayout>

</LinearLayout>
